--- a/style.css
+++ b/style.css
@@ -675,7 +675,7 @@ button.hero-btn1:hover {
 
 .blur-background {
 	
-   
+   border-radius: 40px;
     left: 0;
     width: 100%;
     height: 100%;
