--- a/style.css
+++ b/style.css
@@ -250,6 +250,21 @@ body {
 	background: rgba(226, 0, 0, 0.7);
 }
 
+.layer2{
+	background: transparent;
+	height: 100%;
+	width: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	transition: 0.5s;
+}
+
+.layer2:hover{
+	background: rgba(23, 4, 239, 0.7);
+
+}
+
 .layer h3{
 	width: 100%;
 	font-weight: 500;
@@ -263,7 +278,25 @@ body {
 	transition: 0.5s;
 }
 
+.layer2 h3{
+	width: 100%;
+	font-weight: 500;
+	color: #fff;
+	font-size: 26px;
+	bottom: 0;
+	left: 50%;
+	transform: translateX(-50%);
+	position: absolute;
+	opacity: 0;
+	transition: 0.5s;
+}
+
 .layer:hover h3{
+	bottom: 49%;
+	opacity: 1;
+}
+
+.layer2:hover h3{
 	bottom: 49%;
 	opacity: 1;
 }
